--- a/public/doc.html
+++ b/public/doc.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="icon" type="image/svg+xml" href="./others/favicon.png" />
+		<title>Tajify API Documentation</title>
 		<style>
 			* {
 				box-sizing: border-box;
